--- a/note_app/pubspec.yaml
+++ b/note_app/pubspec.yaml
@@ -9,17 +9,28 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_staggered_grid_view: ^0.7.0
+  
+  flutter_launcher_icons: "^0.13.1"
+  flutter_staggered_grid_view: ^0.4.0
   intl: ^0.19.0
   path: ^1.9.0
   sqflite: ^2.3.2
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
+  provider: ^6.0.0
+  zefyr: ^1.0.0-rc.5
+  flutter_quill: ^2.0.7
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
